# asl-classifier

./: .gitignore  .python-version  ASL_Notebook.ipynb  Procfile  README.md  app.py  pyproject.toml  requirements.txt
asl_classifier/: main.py
data/: data_structure.txt
notebooks/: ASL_Notebook.ipynb
tests/: test_asl_classifier.py
