[tool.poetry]
name = "asl-classifier"
version = "0.1.0"
description = "Classifies which letter an American Sign Language sign corresponds to"
authors = ["ben thompson <ben97thompson@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.2"
numpy = "^1.22.4"
jupyter = "^1.0.0"
streamlit = "^1.10.0"
keras = "^2.9.0"
tensorflow = "^2.9.1"
scikit-image = "^0.19.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
